assignment/kubernetes/application/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: assignment-nagp
  namespace: assignment

spec:
  type: NodePort

  selector:
    app: assignment-nagp

  ports:
    - port: 80
      targetPort: 8080
